Fixed spacings

--- a/app/client/stylesheets/components/pu-block.sass
+++ b/app/client/stylesheets/components/pu-block.sass
@@ -182,6 +182,11 @@
             margin-top: 40px
             margin-bottom: 40px
 
+            .pu-form
+                .pu-sub-formfooter
+                    margin-top: 0
+                    margin-bottom: 5px
+
         &-in-startpartup-modal
             width: 570px
 
