--- a/app/client/stylesheets/components/pu-button.sass
+++ b/app/client/stylesheets/components/pu-button.sass
@@ -320,7 +320,7 @@
         + .pu-button-text
             &:before
                 display: inline-block
-                margin-right: 10px
+                margin-right: 13px
                 content: '|'
         
         &-gray
